; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/extr_mt9m001.c_mt9m001_set_bus_param.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/extr_mt9m001.c_mt9m001_set_bus_param.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.soc_camera_device = type { i32 }
%struct.soc_camera_link = type { i32 (%struct.soc_camera_link*, i64)* }

@SOCAM_DATAWIDTH_MASK = common dso_local global i64 0, align 8
@EINVAL = common dso_local global i32 0, align 4
@SOCAM_DATAWIDTH_10 = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.soc_camera_device*, i64)* @mt9m001_set_bus_param to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mt9m001_set_bus_param(%struct.soc_camera_device* %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.soc_camera_device*, align 8
  %5 = alloca i64, align 8
  %6 = alloca %struct.soc_camera_link*, align 8
  %7 = alloca i64, align 8
  store %struct.soc_camera_device* %0, %struct.soc_camera_device** %4, align 8
  store i64 %1, i64* %5, align 8
  %8 = load %struct.soc_camera_device*, %struct.soc_camera_device** %4, align 8
  %9 = call %struct.soc_camera_link* @to_soc_camera_link(%struct.soc_camera_device* %8)
  store %struct.soc_camera_link* %9, %struct.soc_camera_link** %6, align 8
  %10 = load i64, i64* %5, align 8
  %11 = load i64, i64* @SOCAM_DATAWIDTH_MASK, align 8
  %12 = and i64 %10, %11
  store i64 %12, i64* %7, align 8
  %13 = load i64, i64* %7, align 8
  %14 = call i32 @is_power_of_2(i64 %13)
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %19, label %16

16:                                               ; preds = %2
  %17 = load i32, i32* @EINVAL, align 4
  %18 = sub nsw i32 0, %17
  store i32 %18, i32* %3, align 4
  br label %39

19:                                               ; preds = %2
  %20 = load %struct.soc_camera_link*, %struct.soc_camera_link** %6, align 8
  %21 = getelementptr inbounds %struct.soc_camera_link, %struct.soc_camera_link* %20, i32 0, i32 0
  %22 = load i32 (%struct.soc_camera_link*, i64)*, i32 (%struct.soc_camera_link*, i64)** %21, align 8
  %23 = icmp ne i32 (%struct.soc_camera_link*, i64)* %22, null
  br i1 %23, label %24, label %31

24:                                               ; preds = %19
  %25 = load %struct.soc_camera_link*, %struct.soc_camera_link** %6, align 8
  %26 = getelementptr inbounds %struct.soc_camera_link, %struct.soc_camera_link* %25, i32 0, i32 0
  %27 = load i32 (%struct.soc_camera_link*, i64)*, i32 (%struct.soc_camera_link*, i64)** %26, align 8
  %28 = load %struct.soc_camera_link*, %struct.soc_camera_link** %6, align 8
  %29 = load i64, i64* %7, align 8
  %30 = call i32 %27(%struct.soc_camera_link* %28, i64 %29)
  store i32 %30, i32* %3, align 4
  br label %39

31:                                               ; preds = %19
  %32 = load i64, i64* %7, align 8
  %33 = load i64, i64* @SOCAM_DATAWIDTH_10, align 8
  %34 = icmp eq i64 %32, %33
  br i1 %34, label %35, label %36

35:                                               ; preds = %31
  store i32 0, i32* %3, align 4
  br label %39

36:                                               ; preds = %31
  %37 = load i32, i32* @EINVAL, align 4
  %38 = sub nsw i32 0, %37
  store i32 %38, i32* %3, align 4
  br label %39

39:                                               ; preds = %36, %35, %24, %16
  %40 = load i32, i32* %3, align 4
  ret i32 %40
}

declare dso_local %struct.soc_camera_link* @to_soc_camera_link(%struct.soc_camera_device*) #1

declare dso_local i32 @is_power_of_2(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
